[project]
name = "Airflow 2to3"
version = "0.0.1"
authors = [
  { name="Karthikeyan Singaravelan", email="tir.karthi@gmail.com" },
]
description = "A python package for Airflow 2 to 3 migration"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "libcst==1.5.0",
  "black==24.10.0",
]